
[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "a02"
version = "0.0.5"               # May be automated using CI/CD
authors = [
  { name="Raghav B. Venkataramaiyer", email="bv.raghav@thapar.edu" },
]
# maintainers = [
#   { name="Raghav B. Venkataramaiyer",
#     email="bvraghav@gmail.com" },
# ]
description = "Assignment A02 (UTA027)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    # See: https://pypi.org/classifiers/
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Unix Shell",
]
dependencies = ["click"]

[project.scripts]
add_one = "solutions.cli.add_one:cli"

[project.urls]
Homepage = "https://github.com/tiet-uta027/a02.git"
Issues = "https://github.com/tiet-uta027/a02.git/issues"

# 

# Adapted from https://stackoverflow.com/a/50156706
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
# THE END -------------------------------------------
